# Qt-custom-switch-widget

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/Basic/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
examples/OnOffButton/: CMakeLists.txt  main.cpp
examples/SwicthButton/: CMakeLists.txt  main.cpp
examples/ToggleOnOff/: CMakeLists.txt  main.cpp
examples/ToggleTrueFalse/: CMakeLists.txt  main.cpp  switchbutton.ui
examples/ToggleYesNo/: CMakeLists.txt  main.cpp  switchbutton.ui
lib/: CMakeLists.txt  qcswitchwidget.qrc
lib/include/: qcswitchwidget.hpp
lib/src/: qcswitchwidget.cpp
